src/css/logger-ui.css
/* ... */
#vwRenderer #vwScroller {
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    position: absolute;
    width: 100%;
    }
#vwRenderer #vwScroller #vwVirtualContent {
    overflow: hidden;
    }
#vwRenderer #vwContent {
    left: 0;
    overflow: hidden;
    position: absolute;
    width: 100%;
    }
#vwRenderer .logEntry {
    display: block;
    left: 0;
    overflow: hidden;
    position: absolute;
    width: 100%;
    }
#vwRenderer .logEntry:empty {
    display: none;
    }
#vwRenderer .logEntry > div {
    height: 100%;
    white-space: nowrap;
    }
#vwRenderer .logEntry > div[data-status="1"],
.netFilteringDialog > .panes > .details > div[data-status="1"] {
    background-color: rgb(var(--popup-cell-block-surface-rgb) / 50%);
    }
#vwRenderer .logEntry > div[data-status="1"][data-modifier],
.netFilteringDialog > .panes > .details > div[data-status="1"][data-modifier] {
    background-color: var(--logger-modified-surface);
    }
#vwRenderer .logEntry > div[data-status="3"] {
    background-color: rgba(108, 108, 108, 0.1);
    }
:root.colorBlind #vwRenderer .logEntry > div[data-status="3"] {
    background-color: rgba(96, 96, 96, 0.1);
    }
#vwRenderer .logEntry > div[data-status="2"],
.netFilteringDialog > .panes > .details > div[data-status="2"] {
    background-color: rgb(var(--popup-cell-allow-surface-rgb) / 50%);
    }
#vwRenderer .logEntry > div[data-tabid="-1"] {
    text-shadow: 0 0.2em 0.4em #aaa;
    }
#vwRenderer .logEntry > div.extendedRealm,
#vwRenderer .logEntry > div.redirect {
    background-color: var(--logger-redirected-surface);
    }
#vwRenderer .logEntry > div.extendedRealm.scriptlet {
    background-color: var(--logger-scriptlet-surface);
    }
:root.colorBlind #vwRenderer .logEntry > div.extendedRealm,
:root.colorBlind #vwRenderer .logEntry > div.redirect {
    background-color: rgba(0, 19, 110, 0.1);
    }
#vwRenderer .logEntry > div[data-aliasid] {
    color: var(--popup-cell-cname-ink);
    }
#vwRenderer .logEntry > div[data-type="tabLoad"] {
    background-color: #666;
    color: white;
    }
#vwRenderer .logEntry > div[data-type="error"] {
    color: #800;
    }
#vwRenderer .logEntry > div[data-type="info"] {
    color: #008;
    }
#vwRenderer .logEntry > div.voided {
    opacity: 0.5;
    }
#vwRenderer .logEntry > div.voided:hover {
    opacity: 0.7;
    }

#vwRenderer .logEntry > div > span {
    border: 1px dotted var(--border-1);
    border-top: 0;
    border-right: 0;
    box-sizing: border-box;
    display: inline-block;
    height: 100%;
    overflow: hidden;
    padding: 0.2em;
    vertical-align: middle;
    white-space: nowrap;
    word-break: break-all;
    }
#vwRenderer .logEntry > div.canDetails:hover > span {
    background-color: rgba(0,0,0,0.04);
    }
body[dir="ltr"] #vwRenderer .logEntry > div > span:first-child {
    border-left: 0;
    }
body[dir="rtl"] #vwRenderer .logEntry > div > span:first-child {
    border-right: 0;
    }
#vwRenderer .logEntry > div > span:nth-of-type(1) {
    }
#vwRenderer .logEntry > div > span:nth-of-type(2) {
    }
#vwRenderer #vwContent .logEntry > div > span:nth-of-type(2) {
    text-overflow: ellipsis;
    }
.vExpanded #vwRenderer #vwContent .logEntry > div > span:nth-of-type(2) {
    overflow-y: auto;
    white-space: pre-line;
    }
#vwRenderer .logEntry > div.messageRealm[data-type="tabLoad"] > span:nth-of-type(2) {
    text-align: center;
    }
#vwRenderer .logEntry > div.extendedRealm > span:nth-of-type(2) > span:first-of-type {
    display: none;
    }
#vwRenderer .logEntry > div.extendedRealm > span:nth-of-type(2) > span:last-of-type {
    pointer-events: none;
    }
#vwRenderer .logEntry > div.extendedRealm.isException > span:nth-of-type(2) > span:last-of-type {
    text-decoration: line-through rgba(0,0,255,0.7);
    }
#vwRenderer .logEntry > div > span:nth-of-type(3) {
    font-family: monospace;
    padding-left: 0.3em;
    padding-right: 0.3em;
    text-align: center;
    }
#vwRenderer .logEntry > div.canDetails:hover > span:not(:nth-of-type(4)):not(:nth-of-type(8)) {
    background: rgba(0, 0, 255, 0.1);
    cursor: zoom-in;
    }
#netInspector:not(.vExpanded) #vwRenderer .logEntry > div > span:nth-of-type(4) {
    direction: rtl;
    text-align: right;
    unicode-bidi: plaintext;
    }
#vwRenderer #vwContent .logEntry > div > span:nth-of-type(4) {
    text-overflow: ellipsis;
    }
.vExpanded #vwRenderer #vwContent .logEntry > div > span:nth-of-type(4) {
    overflow-y: auto;
    text-overflow: clip;
    white-space: pre-line;
    }
#vwRenderer .logEntry > div > span:nth-of-type(5) {
    text-align: center;
    }
/* visual for tabless network requests */
#vwRenderer .logEntry > div > span:nth-of-type(5) {
    position: relative;
    }
#vwRenderer .logEntry > div > span:nth-of-type(7) {
    }
#vwRenderer #vwContent .logEntry > div > span:nth-of-type(7) {
    }
#vwRenderer .logEntry > div > span:nth-of-type(8) {
    position: relative;
    }
#vwRenderer #vwContent .logEntry > div > span:nth-of-type(8) {
    text-overflow: ellipsis;
    }
.vExpanded #vwRenderer #vwContent .logEntry > div > span:nth-of-type(8) {
    overflow-y: auto;
    white-space: pre-line;
    }
#vwRenderer .logEntry > div > span:nth-of-type(8) b {
    font-weight: bold;
    }
#vwRenderer .logEntry > div[data-status="1"] > span:nth-of-type(8) b,
.netFilteringDialog > .panes > .details > div[data-status="1"] b {
    background-color: rgb(var(--popup-cell-block-surface-rgb) / 100%);
    }
#vwRenderer .logEntry > div[data-status="1"][data-modifier] > span:nth-of-type(8) b,
.netFilteringDialog > .panes > .details > div[data-status="1"][data-modifier] b {
    background-color: var(--logger-modified-em-surface);
    }
#vwRenderer .logEntry > div[data-status="3"] > span:nth-of-type(8) b {
    background-color: rgba(108, 108, 108, 0.2);
    }
:root.colorBlind #vwRenderer .logEntry > div[data-status="3"] > span:nth-of-type(8) b {
    background-color: rgba(96, 96, 96, 0.2);
    }
/* ... */

